GNOME Bugzilla – Bug 691592
the signal handler "gtk_spin_button_accessible_value_changed" should be disconnected
Last modified: 2013-01-21 03:17:59 UTC
Created attachment 233294 [details] [review] a patch for gtkspinbuttonaccessible.c An instance of GtkAdjustment may be used by another instance after the spin button widget is destroyed. In that case, the function "gtk_spin_button_accessible_value_changed()" will be called with an invalid argument. This situation is often caused when one use GtkCellRendererSpin widget. To avoid invalid call of the function, the signal handler for the "value-changed" signal should be disconnected when the spin-button widget is destroyed. Attached patch improve the behavior.
Review of attachment 233294 [details] [review]: We should just use g_signal_connect_object here, I think
Thank you for reviewing the patch. > We should just use g_signal_connect_object here, I think I tried using g_signal_connect_object. It seems works well.
Created attachment 233417 [details] [review] a patch using g_signal_connect_object
Review of attachment 233417 [details] [review]: Looks good