gtk/a11y/gtkspinbuttonaccessible.c
@@ -51,10 +51,10 @@ gtk_spin_button_accessible_initialize (AtkObject *obj,
 
   adjustment = gtk_spin_button_get_adjustment (GTK_SPIN_BUTTON (data));
   if (adjustment)
-    g_signal_connect (adjustment,
-                      "value-changed",
-                      G_CALLBACK (gtk_spin_button_accessible_value_changed),
-                      obj);
+    g_signal_connect_object (adjustment,
+                             "value-changed",
+                             G_CALLBACK (gtk_spin_button_accessible_value_changed),
+                             obj, 0);
 
   obj->role = ATK_ROLE_SPIN_BUTTON;
 }
@@ -71,9 +71,9 @@ gtk_spin_button_accessible_notify_gtk (GObject    *obj,
       GtkAdjustment* adjustment;
 
       adjustment = gtk_spin_button_get_adjustment (GTK_SPIN_BUTTON (widget));
-      g_signal_connect (adjustment, "value-changed",
-                        G_CALLBACK (gtk_spin_button_accessible_value_changed),
-                        spin_button);
+      g_signal_connect_object (adjustment, "value-changed",
+                               G_CALLBACK (gtk_spin_button_accessible_value_changed),
+                               spin_button, 0);
     }
   else
     GTK_WIDGET_ACCESSIBLE_CLASS (gtk_spin_button_accessible_parent_class)->notify_gtk (obj, pspec);
